--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     </div>
                                     <div>
                                         <a href="tel:+966023114564">
-                                            <span>+966 023 11 4564</span>
+                                            <span dir="ltr">+966 023 11 4564</span>
                                             <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
                                         </a>
                                     </div>
@@ -73,9 +73,18 @@
                                         <a class="nav-link" href="who-we-ara.html">من نحن</a>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button"
-                                            data-bs-toggle="dropdown" aria-expanded="false">
+                                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown"
+                                            aria-expanded="false">
                                             الخدمات
+                                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <g id="Group">
+                                                    <path id="Vector"
+                                                        d="M8.19384 8.78145L11.4938 5.48145L12.4365 6.42411L8.19384 10.6668L3.95117 6.42411L4.89384 5.48145L8.19384 8.78145Z"
+                                                        fill="#E1E1E1" />
+                                                </g>
+                                            </svg>
+
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="financial consulting.html">الاستشارات
@@ -148,7 +157,7 @@
                                     </div>
                                     <div>
                                         <a href="tel:+966023114564">
-                                            <span>+966 023 11 4564</span>
+                                            <span dir="ltr">+966 023 11 4564</span>
                                             <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
                                         </a>
                                     </div>
@@ -258,8 +267,8 @@
                                     </div>
                                     <div>
                                         <a href="tel:+966023114564">
-                                            <span>+966 023 11 4564</span>
                                             <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
+                                            <span dir="ltr">+966 023 11 4564</span>
                                         </a>
                                     </div>
                                 </div>
@@ -361,8 +370,8 @@
     <section id="video">
         <div class="container">
             <div class="row mx-auto col-md-8">
-                <h3>تعرف على <span class="main-color">سلسلة</span> بفيديو</h3>
-                <p>
+                <h3 class="headline load-hidden">تعرف على <span class="main-color">سلسلة</span> بفيديو</h3>
+                <p class="headline">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
                     tristique,
                     nec malesuada elit
@@ -1534,7 +1543,7 @@
     <section id="testimonial">
         <div class="container">
             <h3>تعرف على خبراء <span class="main-color">سلسلة</span></h3>
-            <div class="swiper mySwiper">
+            <div class="swiper mySwiper-11">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <img src="imgs/testimonial-2.webp" alt="testimonial-1" class="img-fluid">
@@ -1981,7 +1990,6 @@
                                     <style>
                                         svg {
                                             fill: #da4949;
-                                            margin-bottom: 20px
                                         }
                                     </style>
                                     <path
@@ -2004,7 +2012,7 @@
                                     <style>
                                         svg {
                                             fill: #da4949;
-                                            margin-bottom: 20px
+
                                         }
                                     </style>
                                     <path
@@ -2027,7 +2035,7 @@
                                     <style>
                                         svg {
                                             fill: #da4949;
-                                            margin-bottom: 20px
+
                                         }
                                     </style>
                                     <path
@@ -2050,7 +2058,7 @@
                                     <style>
                                         svg {
                                             fill: #da4949;
-                                            margin-bottom: 20px
+
                                         }
                                     </style>
                                     <path
@@ -2076,7 +2084,7 @@
                                     <style>
                                         svg {
                                             fill: #da4949;
-                                            margin-bottom: 20px
+
                                         }
                                     </style>
                                     <path
@@ -2099,7 +2107,7 @@
                                     <style>
                                         svg {
                                             fill: #da4949;
-                                            margin-bottom: 20px
+
                                         }
                                     </style>
                                     <path
@@ -2122,7 +2130,6 @@
                                     <style>
                                         svg {
                                             fill: #da4949;
-                                            margin-bottom: 20px
                                         }
                                     </style>
                                     <path
@@ -2161,6 +2168,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
