--- a/info-gallery.html
+++ b/info-gallery.html
@@ -206,11 +206,23 @@
                     <div class="footer-block">
                         <img src="imgs/logo.png" alt="logo" class="img-fluid logo">
                         <p>شركة سلسلة هي أول شركة سعودية من نوعها في السوق السعودي</p>
-                        <div class="media">
-                            <img src="imgs/icons/Linked-In.svg" alt="Linked-In">
-                            <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx">
-                            <img src="imgs/icons/Facebook.svg" alt="Facebook">
-                            <img src="imgs/icons/Instagram.svg" alt="Instagram">
+                        <div class="media d-flex align-items-center">
+                            <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                                target="_blank">
+                                <i class="fa fa-whatsapp"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
+                                <i class="fa fa-linkedin-square"></i>
+                            </a>
+                            <a href="https://twitter.com/slsalah_sa" target="_blank">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                            <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/slsalah_sa" target="_blank">
+                                <i class="fa fa-instagram"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -248,21 +260,30 @@
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
                             <li>
-                                <a href="mailto:info@gmail.com">
+                                <a href="mailto:contact@slsalah.com">
                                     <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
-                                    <span>info@gmail.com</span>
+                                    <span>contact@slsalah.com</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="tel:+966023114564">
+                                <a href="tel:+966555881764">
                                     <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span>+966 023 11 4564</span>
+                                    <span dir="ltr">+966 555 88 1764</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="tel:+966112074129">
+                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
+                                    <span dir="ltr">+966 112 07 4129</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
                                     <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span>الرياض - شارع الملك فهد 112</span>
+                                    <span class="lh-lg">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق العروبة
+                                        - الدور
+                                        الأرضي - مبنى 13
+                                    </span>
                                 </a>
                             </li>
                         </ul>
