Finish the home page

--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,7 @@
             <div class="swiper mySwiper-11">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-2.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. ليلى بنت معيض</span>
                             <span class="job">مستشارة اقتصادية ومطورة أعمال</span>
@@ -1405,7 +1405,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. مصطفى حسن</span>
                             <span class="job">مستشار اقتصادي</span>
@@ -1419,7 +1419,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-2.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/أ.فاطمة مطاوع.png" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. فاطمة مطاوع</span>
                             <span class="job">مستشارة مالية وإدارية</span>
@@ -1435,7 +1435,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">د. عبد الله الحسيني</span>
                             <span class="job">مستشار ومراجع محاسبي</span>
@@ -1449,7 +1449,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-2.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/أ.شادية المصري.png" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. شادية المصري</span>
                             <span class="job"> مستشارة ومقيّمة معتمدة في إدارة الابتكار المؤسسي وتطبيقات
@@ -1464,7 +1464,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/أ.أحمد ديب.png" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">د. أحمد الديب</span>
                             <span class="job">مستشار الموارد البشرية</span>
@@ -1480,7 +1480,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-3.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">المحامي فهد القحطاني</span>
                             <span class="job"> مستشار قانوني</span>
@@ -1495,7 +1495,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-1.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">المحامي أسامة جبر</span>
                             <span class="job">مستشار صياغة اللوائح والإجراءات والسياسات التنظيمية.</span>
@@ -1509,12 +1509,110 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="imgs/testimonial-3.webp" alt="testimonial-1" class="img-fluid">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
                         <div class="info">
                             <span class="name">أ. عبد الرحمن سليمان</span>
                             <span class="job">مستشار ومحلل استثماري</span>
                             <p class="desc">
                                 متخصص تقييم شركات و متخصص تحليل الأسواق المالية وصناديق الاستثمار ودراسة مخاطر السوق.
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                اطلب استشارة
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">أ. أحمد محمود</span>
+                            <span class="job">مستشار تسويق وتطوير العلامات التجارية</span>
+                            <p class="desc">
+                                مستشار تسويق وتطوير العلامات التجارية
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                اطلب استشارة
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">أ. محمد الشحاذة</span>
+                            <span class="job">مستشار مؤسس ومطور لكبرى العلامات التجارية في مجال الاغذية</span>
+                            <p class="desc">
+                                مستشار مؤسس ومطور لكبرى العلامات التجارية في مجال الاغذية
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                اطلب استشارة
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">أ. كريم الزيادي</span>
+                            <span class="job">مستشار تصميم الهوية البصرية والعلامات التجارية</span>
+                            <p class="desc">
+                                مستشار تصميم الهوية البصرية والعلامات التجارية
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                اطلب استشارة
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/م.كريم سيف.png" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">أ.كريم سيف</span>
+                            <span class="job">مستشار تصميم تجربة المستخدم وتصميم الويب والتطبيقات</span>
+                            <p class="desc">
+                                مستشار تصميم تجربة المستخدم وتصميم الويب والتطبيقات
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                اطلب استشارة
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">د. أحمد مصطفى</span>
+                            <span class="job">مستشار الأبحاث التسويقية والطبية</span>
+                            <p class="desc">
+                                مستشار الأبحاث التسويقية والطبية
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                اطلب استشارة
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">د. محمد الأخرس</span>
+                            <span class="job">مستشار تدريب وتأهيل ومعلق صوتي</span>
+                            <p class="desc">
+                                مستشار تدريب وتأهيل ومعلق صوتي
+                            </p>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                اطلب استشارة
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/خبراء سلسلة/صور شخصية/غير معروف.jpg" alt="testimonial-1" class="img-fluid">
+                        <div class="info">
+                            <span class="name">أ. محمد الشعار</span>
+                            <span class="job">مستشار تأسيس وإدارة المطاعم والفنادق والخدمات السياحية</span>
+                            <p class="desc">
+                                مستشار تأسيس وإدارة المطاعم والفنادق والخدمات السياحية
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
@@ -1612,7 +1710,7 @@
     <section id="carousel">
         <div class="container">
             <h3>بكل فخر عملاء <span class="main-color">سلسلة</span></h3>
-            <div class="swiper mySwiper2 row gap-5">
+            <div class="swiper mySwiper-2 row gap-5">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slide">
                         <img src="imgs/logos/logo-1.webp" class="img-fluid" alt="logo-1">
@@ -1657,7 +1755,7 @@
     <section id="other-testimonial">
         <div class="container">
             <h3>آراء عملائنا</h3>
-            <div class="testimonial mySwiper3">
+            <div class="testimonial mySwiper-3">
                 <div class="testi-content swiper-wrapper">
                     <div class="slide swiper-slide">
                         <p class="desc">
@@ -1705,8 +1803,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-button-next nav-btn"></div>
-                <div class="swiper-button-prev nav-btn"></div>
+                <div class="swiper-button-next nav-btn">
+                    <img src="imgs/icons/navigation-left.png" alt="icon">
+                </div>
+                <div class="swiper-button-prev nav-btn">
+                    <img src="imgs/icons/navigation-right.png" alt="icon">
+                </div>
                 <div class="swiper-pagination"></div>
             </div>
         </div>
